--- a/DiscordBotGreeter/Data/Settings.json
+++ b/DiscordBotGreeter/Data/Settings.json
@@ -1,5 +1,5 @@
 {
-  "token": "ODE4NDA4ODE5ODM4NjgxMTI4.YEXomw.R_RQogegFxcNiUqTaVT3ipj0tKQ",
+  "token": "TOKEN HERE",
   "owner": 197833933243678720,
   "version": "1.0.0",
   "name": "Discord Bot Greeter",
